[tool.poetry]
name = "vyter"
version = "0.1.0"
description = ""
authors = ["0xSwapFeeder <tristan.gremont@epitech.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'vyter.cli:run'