[tool.poetry]
name = "linter-server"
version = "0.1.0"
description = ""
authors = ["0xSwapFeeder <tristan.gremont@epitech.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vyter = { path = "../../libs/vyter"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
linter = 'linter_server.server:run'