[tool.poetry]
name = "servers"
version = "0.1.0"
description = ""
authors = ["Enzo Bonato <enzo.bonato@epitech.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ast_extractor = { path = "../../libs/ast_extractor" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
